--- a/index.html
+++ b/index.html
@@ -16,5 +16,7 @@
         <button class="btn">Option 3</button>
         <button class="btn">Option 4</button>
     </div>
+
+    <script src="game.js"></script>
 </body>
 </html>
