--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <div id="text">Text</div>
+        <div id="story">Text</div>
         <div id="options-buttons" class ="btn-grid"></div>
         <button class="btn">Option 1</button>
         <button class="btn">Option 2</button>
