--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 </head>
 <body>
     <div class="container">
-        <div id="story">Text</div>
-        <div id="options-buttons" class ="btn-grid"></div>
-        <button class="btn">Option 1</button>
-        <button class="btn">Option 2</button>
-        <button class="btn">Option 3</button>
-        <button class="btn">Option 4</button>
+        <div id="text">Text</div>
+        <div id="options-buttons" class ="btn-grid">
+            <button class="btn">Option 1</button>
+            <button class="btn">Option 2</button>
+            <button class="btn">Option 3</button>
+            <button class="btn">Option 4</button>
+        </div>
+       
     </div>
 
     <script src="game.js"></script>
