--- a/index.html
+++ b/index.html
@@ -6,17 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Crypt</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap" rel="stylesheet">
     <script defer src="game.js"></script>
 </head>
 <body>
-    <div class="container">
-        <div id="text">Text</div>
-        <div id="option-buttons" class ="btn-grid">
+    <main class="container">
+        <figure id="image"></figure>
+        <figcaption id="text">Text</figcaption>
+        <nav id="option-buttons" class ="btn-grid">
             <button class="btn">Option 1</button>
             <button class="btn">Option 2</button>
             <button class="btn">Option 3</button>
             <button class="btn">Option 4</button>
-        </div>  
-    </div>
+        </nav>  
+    </main>
 </body>
 </html>
