Little closer to solving repeat image issues

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <main class="container">
-        <figure id="image"></figure>
+        <figure id="image"><img src="Assets/Day1-Ring.jpg" alt="Scene"></figure>
         <figcaption id="text">Text</figcaption>
         <nav id="option-buttons" class ="btn-grid">
             <button class="btn">Option 1</button>
