--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crypt Of Spooks</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=MedievalSharp&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Henny+Penny&family=Rye&display=swap" rel="stylesheet">
     <script defer src="game.js"></script>
 </head>
 <body>
+    <nav id="navbar">CRYPT OF SPOOKS</nav>
     <main class="container">
         <figure id="image"><img src="Assets/Day1-Ring.jpg" alt="Scene"></figure>
         <figcaption id="text">Text</figcaption>
