flex-box on imgCollection, mobile responsive code

--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
 <body>
     <nav id="navbar">CRYPT OF SPOOKS</nav>
     <main class="container">
-        <figure id="image"><img src="Assets/Day1-Ring.jpg" alt="Scene"></figure>
+        <top class="imgCollection">
+            <figure class="art"><img src="Assets/DE5004BL03W (1).jpg" alt="art"></figure>
+            <figure id="image"><img src="Assets/Day1-Ring.jpg" alt="Scene"></figure>
+            <figure class="art"><img src="Assets/DE5004BL03W (1).jpg" alt="art"></figure>
+        </top>
         <figcaption id="text">Text</figcaption>
         <nav id="option-buttons" class="btn-grid">
             <button class="btn">Option 1</button>
