--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <nav id="navbar">CRYPT OF SPOOKS</nav>
+    <nav><button id="navbar">CRYPT OF SPOOKS</button></nav>
     <main class="container">
         <figure id="image"><img src="Assets/Day1-Ring.jpg" alt="Scene"></figure>
         <figcaption id="text">Text</figcaption>
