Changed file name: game.js -> script.js

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Crypt Of Spooks</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Henny+Penny&family=Rye&display=swap" rel="stylesheet">
-    <script defer src="game.js"></script>
+    <script defer src="/script.js"></script>
 </head>
 
 <body>
