startGame() edited. Functional intro page

--- a/index.html
+++ b/index.html
@@ -6,14 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Crypt Of Spooks</title>
+    <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css">
+
     <link href="https://fonts.googleapis.com/css2?family=Henny+Penny&family=Rye&display=swap" rel="stylesheet">
     <script defer src="/script.js"></script>
 </head>
 
 <body>
     <nav><button id="navbar">CRYPT OF SPOOKS</button></nav>
-    <main class="container">
+    <!-- WIP -->
+    <div id="avatar"></div>
+
+    <!-- MAIN CONTAINER -->
+    <main id="mainCont"class="container" hidden>
         <figure id="image"><img src="Assets/Day1-Ring.jpg" alt="Scene"></figure>
         <figcaption id="text">Text</figcaption>
         <nav id="option-buttons" class="btn-grid">
@@ -23,6 +29,12 @@
             <button class="btn">Option 4</button>
         </nav>
     </main>
+
+    <!-- INTRO WIP -->
+    <div class="controls">
+        <p id="intro">Welcome to the Crypt Of Spooks</p>
+        <button id="start-btn" class="start-btn btn">Start</button>
+    </div>
 </body>
 
 </html>
