added function show()

--- a/index.html
+++ b/index.html
@@ -15,7 +15,20 @@
 </head>
 
 <body>
+    <!-- NAVIGATION BAR -->
     <nav><button id="navbar">CRYPT OF SPOOKS</button></nav>
+
+    <!-- MAIN MENU -->
+    <menu align="center" id="controls">
+        <p id="intro">Welcome to the Crypt Of Spooks</p>
+        <div class="menu">
+            <button id="start-btn" class="start-btn btn">Start</button>
+            <button class="btn">Settings</button>
+            <button class="btn">About</button>
+            <button class="btn">Extras</button>
+            
+        </div>
+    </menu>
 
     <!-- MAIN CONTAINER -->
     <main id="mainCont" class="container" hidden>
@@ -28,18 +41,6 @@
             <button class="btn">Option 4</button>
         </nav>
     </main>
-
-    <!-- INTRO WIP -->
-    <menu align="center" id="controls">
-        <p id="intro">Welcome to the Crypt Of Spooks</p>
-        <div class="menu">
-            <button id="start-btn" class="start-btn btn">Start</button>
-            <button class="btn">Settings</button>
-            <button class="btn">About</button>
-            <button class="btn">Extras</button>
-            
-        </div>
-    </menu>
 </body>
 
 </html>
