--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <!-- NAVIGATION BAR -->
     <nav id="navbar">
-        <button><i class="material-icons md-48">volume_up</i></button>
+        <button id="music"><i class="material-icons md-48">volume_up</i></button>
         <button><i class="material-icons md-48">volume_off</i></button>
     </nav>
 
