playMusic(): toggle music pausing and playing track successfully - still WIP

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <body>
     <!-- NAVIGATION BAR -->
     <nav id="navbar">
+        <audio src="" id="track"></audio>
         <button id="music"><i class="material-icons md-48">volume_up</i></button>
     </nav>
 
