--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- NAVIGATION BAR -->
     <nav id="navbar">
         <audio src="" id="track"></audio>
-        <button id="music"><i class="material-icons md-48">volume_up</i></button>
+        <button id="music"><i class="material-icons md-48">volume_off</i></button>
     </nav>
 
     <!-- MAIN MENU -->
