dark mode css rework, navbar buttons styling

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <nav id="navbar">
         <audio src="" id="track"></audio>
         <button id="music"><i class="material-icons md-48">volume_off</i></button>
+        <button id="mode"><i class="material-icons md-48">light_mode</i></button>
+        <button><i class="material-icons md-48">dark_mode</i></button>
     </nav>
 
     <!-- MAIN MENU -->
