Menu margin spacing and extra css theme styling edits

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <!-- MAIN MENU -->
     <menu align="center" id="controls">
-        <p id="intro">Welcome to the Crypt Of Spooks</p>
+        <p id="intro">Crypt Of Spooks</p>
         <nav class="menu">
             <button id="start-btn" class="menuBtn">Start</button>
             <button class="menuBtn">Load</button>
