disabled three menu buttons

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
         <p id="intro">Crypt Of Spooks</p>
         <nav class="menu">
             <button id="start-btn" class="menuBtn">Start</button>
-            <button class="menuBtn">Load</button>
-            <button class="menuBtn">Settings</button>
-            <button class="menuBtn">Extras</button>
+            <button class="menuBtn" disabled>Load</button>
+            <button class="menuBtn" disabled>Settings</button>
+            <button class="menuBtn" disabled>Extras</button>
 
         </nav>
     </menu>
