--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <!-- Stylesheets -->
     <link rel="stylesheet" href="/Assets/css/main.css">
     <link rel="stylesheet" href="/Assets/css/menu.css">
+
+    <!-- FONTS -->
     <link href="https://fonts.googleapis.com/css2?family=Henny+Penny&family=Rye&display=swap" rel="stylesheet">
 </head>
 
@@ -25,7 +27,7 @@
         <div class="theme-switch-wrapper">
             <span id="toggle-icon">
                 <span class="toggle-text">Light Mode</span>
-                    <i class="material-icons md-48">light_mode</i>
+                <i class="material-icons md-48">light_mode</i>
             </span>
             <label class="theme-switch">
                 <input type="checkbox">
@@ -34,7 +36,7 @@
         </div>
     </nav>
 
-    <!-- MAIN MENU -->
+    <!-- MENU -->
     <menu align="center" id="controls">
         <p id="intro">Crypt Of Spooks</p>
         <nav class="menu">
@@ -46,7 +48,7 @@
         </nav>
     </menu>
 
-    <!-- MAIN CONTAINER -->
+    <!-- CONTAINER -->
     <main id="mainCont" class="container" hidden>
         <figure id="image"><img src="Assets/Day1-Ring.jpg" alt="Scene"></figure>
         <figcaption id="text">Text</figcaption>
@@ -57,6 +59,11 @@
             <button class="btn">Option 4</button>
         </nav>
     </main>
+
+    <div id="inventory">
+        <ul>
+        </ul>
+    </div>
 </body>
 <script defer src="/script.js"></script>
 
